# dbtesma

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  autogen.sh  config.mk  configure.ac  datagenerator.cpp  datagenerator.h  db_testdata_maker.pro  macros.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile.nix  makefile.rules.gcc  makefile.win  setup.bat  setup.sh
CONF/: configparser.cpp  configparser.h  configvalidator.cpp  configvalidator.h  makefile  parser.cpp  parser.h  validator.cpp  validator.h
DATA/: column.cpp  column.h  columnhead.cpp  columnhead.h  condincdep.cpp  condincdep.h  config.cpp  config.h  funcdep.cpp  funcdep.h  funcdepgraph.cpp  funcdepgraph.h  headergenerator.cpp  headergenerator.h  makefile  schema.cpp  schema.h  table.cpp  table.h  tableheader.cpp  tableheader.h
FILEHANDLER/: csvhandler.cpp  csvhandler.h  dumphandler.cpp  dumphandler.h  filehandler.cpp  filehandler.h
HELPER/: cliargs.cpp  cliargs.h  cliargshelper.cpp  cliargshelper.h  file.cpp  file.h  filehelper.cpp  filehelper.h  fontcolor.cpp  fontcolor.h  makefile  osabstractionhelper.cpp  osabstractionhelper.h  stringhelper.cpp  stringhelper.h  strings.cpp  strings.h  ui.cpp  ui.h  uihelper.cpp  uihelper.h
MISC/: enums.h  macros.h
TESTS/: stringhelpertest.cpp  stringhelpertest.h  test.cpp  test.h  test_main.cpp
conf/: makefile  parser.cpp  parser.h  validator.cpp  validator.h
data/: column.cpp  column.h  condincdep.cpp  condincdep.h  funcdep.cpp  funcdep.h  funcdepgraph.cpp  funcdepgraph.h  schema.cpp  schema.h  table.cpp  table.h
helper/: file.cpp  (+9 more)
(+52 files in other folders)
