
dnl process this file with autoconf to produce the configure script

AC_PREREQ([2.68])
AC_INIT([dbtesma], [1.0.5], [andreas@grapentin.org])
AC_CONFIG_SRCDIR([src/main.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([scripts])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CXX

AX_ALLOW_DEBUG

AC_CONFIG_FILES([
  Makefile])

AC_OUTPUT
